--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-toastify": "^10.0.4",
     "styled-components": "^6.1.6",
     "yup": "^1.3.3"
   },
