work on signin page

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 MONGODB_URL=mongodb+srv://harsh8272831280:YIMHUgmP9ovnxAH6@cluster0.nigdtjg.mongodb.net/
 BASE_URL=http://localhost:3000/
+BCRYPT_SALT=10
