--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "@mui/material": "^5.15.2",
     "@mui/styled-engine-sc": "^6.0.0-alpha.10",
     "axios": "^1.6.5",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "formik": "^2.4.5",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.4",
     "next": "14.0.4",
     "react": "^18",
